@@ -487,6 +487,9 @@ Extension Modules
 Library
 -------
 
+- Patch #1462313, bug #1443328: the pickle modules now can handle classes
+  that have __private names in their __slots__.
+
 - Bug #1250170: mimetools now gracefully handles socket.gethostname()
   failures gracefully.
 
